--- a/Proyect de Redes version 1.0/Proyect de Redes version 1.0.csproj
+++ b/Proyect de Redes version 1.0/Proyect de Redes version 1.0.csproj
@@ -43,13 +43,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Device.cs" />
     <Compile Include="Host.cs" />
     <Compile Include="Hub.cs" />
+    <Compile Include="IActions.cs" />
     <Compile Include="Instructions.cs" />
     <Compile Include="LoadAndSaveScripts.cs" />
+    <Compile Include="LogicDevice.cs" />
     <Compile Include="Port.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Wire.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
