--- a/Proyect de Redes version 1.0/Proyect de Redes version 1.0.csproj
+++ b/Proyect de Redes version 1.0/Proyect de Redes version 1.0.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Wire.cs" />
+    <Compile Include="Work Tools.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
