--- a/Proyect de Redes version 1.0/Proyect de Redes version 1.0.csproj
+++ b/Proyect de Redes version 1.0/Proyect de Redes version 1.0.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Connect_Inst.cs" />
+    <Compile Include="Create_Inst.cs" />
     <Compile Include="Device.cs" />
     <Compile Include="Host.cs" />
     <Compile Include="Hub.cs" />
@@ -53,6 +55,7 @@
     <Compile Include="Port.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Send_Inst.cs" />
     <Compile Include="Wire.cs" />
     <Compile Include="ControlNetwork.cs" />
   </ItemGroup>
