--- a/Proyect de Redes version 1.0/Proyect de Redes version 1.0.csproj
+++ b/Proyect de Redes version 1.0/Proyect de Redes version 1.0.csproj
@@ -43,18 +43,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Device.cs" />
-    <Compile Include="Host.cs" />
-    <Compile Include="Hub.cs" />
-    <Compile Include="IActions.cs" />
-    <Compile Include="Instruction.cs" />
-    <Compile Include="LogicDevice.cs" />
-    <Compile Include="Parser.cs" />
-    <Compile Include="Port.cs" />
+    <Compile Include="Device\Device.cs" />
+    <Compile Include="Device\Host.cs" />
+    <Compile Include="Device\Hub.cs" />
+    <Compile Include="Device\IActions.cs" />
+    <Compile Include="Heap\HeapArray.cs" />
+    <Compile Include="Heap\Node.cs" />
+    <Compile Include="Interpeter\Instruction.cs" />
+    <Compile Include="Device\LogicDevice.cs" />
+    <Compile Include="Network\Network.cs" />
+    <Compile Include="Interpeter\Parser.cs" />
+    <Compile Include="Device\Port.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Wire.cs" />
-    <Compile Include="ControlNetwork.cs" />
+    <Compile Include="Network\ManageNetwoerk.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
