--- a/Proyect de Redes version 1.0/Proyect de Redes version 1.0.csproj
+++ b/Proyect de Redes version 1.0/Proyect de Redes version 1.0.csproj
@@ -43,17 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Connect_Inst.cs" />
-    <Compile Include="Create_Inst.cs" />
-    <Compile Include="Device.cs" />
-    <Compile Include="Disconnect_Inst.cs" />
-    <Compile Include="Host.cs" />
-    <Compile Include="Hub.cs" />
-    <Compile Include="IActions.cs" />
-    <Compile Include="Instruction.cs" />
-    <Compile Include="LogicDevice.cs" />
-    <Compile Include="Parser.cs" />
-    <Compile Include="Port.cs" />
+    <Compile Include="Instruction\Connect_Inst.cs" />
+    <Compile Include="Instruction\Create_Inst.cs" />
+    <Compile Include="Instruction\Disconnect_Inst.cs" />
+    <Compile Include="Instruction\Instruction.cs" />
     <Compile Include="Device\Device.cs" />
     <Compile Include="Device\Host.cs" />
     <Compile Include="Device\Hub.cs" />
@@ -67,8 +60,8 @@
     <Compile Include="Device\Port.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Send_Inst.cs" />
-    <Compile Include="Wire.cs" />
+    <Compile Include="Instruction\Send_Inst.cs" />
+    <Compile Include="Device\Wire.cs" />
     <Compile Include="Network\ManageNetwoerk.cs" />
   </ItemGroup>
   <ItemGroup>
