--- a/Proyect de Redes version 1.0/Proyect de Redes version 1.0.csproj
+++ b/Proyect de Redes version 1.0/Proyect de Redes version 1.0.csproj
@@ -53,8 +53,9 @@
     <Compile Include="Device\IActions.cs" />
     <Compile Include="Heap\HeapArray.cs" />
     <Compile Include="Heap\Node.cs" />
-    <Compile Include="Interpeter\Instruction.cs" />
     <Compile Include="Device\LogicDevice.cs" />
+    <Compile Include="Instruction\StopSending.cs" />
+    <Compile Include="Network\ManageNetwork.cs" />
     <Compile Include="Network\Network.cs" />
     <Compile Include="Interpeter\Parser.cs" />
     <Compile Include="Device\Port.cs" />
@@ -62,7 +63,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Instruction\Send_Inst.cs" />
     <Compile Include="Device\Wire.cs" />
-    <Compile Include="Network\ManageNetwoerk.cs" />
+    <Compile Include="Tools.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
