--- a/Proyect de Redes version 1.0/Proyect de Redes version 1.0.csproj
+++ b/Proyect de Redes version 1.0/Proyect de Redes version 1.0.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Instruction\Send_Inst.cs" />
     <Compile Include="Device\Wire.cs" />
     <Compile Include="Instruction\Send_frame_Inst.cs" />
+    <Compile Include="Switch.cs" />
     <Compile Include="Tools.cs" />
     <Compile Include="Error_Detection\Error_Detection.cs" />
     <Compile Include="Error_Detection\VRC.cs" />
